[tool.poetry]
name = "pyenv-proxy"
version = "0.1.0"
description = "pyenv proxy"
authors = ["Andy Wang <ci_knight@msn.cn>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6.2"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
